perbaikan news di site en

--- a/ensites/templates/art/index.html
+++ b/ensites/templates/art/index.html
@@ -9,7 +9,7 @@
           <div class="row">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi divkarya">
-                <h3>Collections > Paintings</h3>
+                <h3>Collections</h3>
               </span>
               <div class="sectionfilter">
                 <div class="filterkarya">
