--- a/ensites/templates/art/patung.html
+++ b/ensites/templates/art/patung.html
@@ -9,7 +9,7 @@
           <div class="row">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi divkarya">
-                <h3>Koleksi > Patung</h3>
+                <h3>Collection > Statues</h3>
               </span>
               <div class="sectionfilter">
                 <div class="filterkarya">
@@ -21,11 +21,11 @@
                 </ul-->
 
                   <div class="filtermenu jeniskarya " method="get">
-                    <a id="link1">Jenis benda seni +</a>
+                    <a id="link1">Types of arts objects +</a>
                     <ul id="jenisbenda" class="jenisbenda" name="featured">
-                      <li value="Lukisan"><a href="{% url 'lukisan-list' %}">Lukisan</a></li>
-                      <li value="Patung"><a href="{% url 'patung-list' %}">Patung</a></li>
-                      <li value="Kriya"><a href="{% url 'kriya-list' %}">Kriya</a></li>
+                      <li value="Lukisan"><a href="{% url 'Painting-list' %}">Paintings</a></li>
+                      <li value="Patung"><a href="{% url 'Statue-list' %}">Statues</a></li>
+                      <li value="Kriya"><a href="{% url 'Craft-list' %}">Crafts</a></li>
                     </ul>
                   </div>
 
