--- a/ensites/templates/art/kriya.html
+++ b/ensites/templates/art/kriya.html
@@ -9,28 +9,20 @@
           <div class="row">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi divkarya">
-                <h3>Koleksi > Kriya</h3>
+                <h3>Collections > Craft</h3>
               </span>
               <div class="sectionfilter">
                 <div class="filterkarya">
                   <label class="filtermenu" style="padding: 0; font-size: smaller; color: #3c4a50">Filter</label>
 
-                <!--form method="get">
-                {{ filter.form.as_p }}
-                <button type="submit">Search</button>
-                </form>
-                <ul>
-                {% for jenis in filter.qs %}
-                <li>{{ jenis.Jenis }}</li>
-                {% endfor %}
-                </ul-->
+
 
                   <div class="filtermenu jeniskarya " method="get">
-                    <a id="link1">Jenis benda seni +</a>
+                    <a id="link1">Types of arts objects +</a>
                     <ul id="jenisbenda" class="jenisbenda" name="featured">
-                      <li value="Lukisan"><a href="{% url 'lukisan-list' %}">Lukisan</a></li>
-                      <li value="Patung"><a href="{% url 'patung-list' %}">Patung</a></li>
-                      <li value="Kriya"><a href="{% url 'kriya-list' %}">Kriya</a></li>
+                      <li value="Lukisan"><a href="{% url 'Painting-list' %}">Paintings</a></li>
+                      <li value="Patung"><a href="{% url 'Statue-list' %}">Statues</a></li>
+                      <li value="Kriya"><a href="{% url 'Craft-list' %}">Crafts</a></li>
                     </ul>
                   </div>
                   <!--div class="filtermenu temakarya">
