--- a/ensites/templates/art/lukisan.html
+++ b/ensites/templates/art/lukisan.html
@@ -9,30 +9,29 @@
           <div class="row">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi divkarya">
-                <h3>Koleksi > Lukisan</h3>
+                <h3>Collections > Paintings</h3>
               </span>
               <div class="sectionfilter">
                 <div class="filterkarya">
                   <label class="filtermenu" style="padding: 0; font-size: smaller; color: #3c4a50">Filter</label>
 
 
-
                   <div class="filtermenu jeniskarya " method="get">
-                    <a id="link1">Jenis benda seni +</a>
+                    <a id="link1">Types of arts objects +</a>
                     <ul id="jenisbenda" class="jenisbenda" name="featured">
-                      <li value="Lukisan"><a href="{% url 'lukisan-list' %}">Lukisan</a></li>
-                      <li value="Patung"><a href="{% url 'patung-list' %}">Patung</a></li>
-                      <li value="Kriya"><a href="{% url 'kriya-list' %}">Kriya</a></li>
+                      <li value="Lukisan"><a href="{% url 'Painting-list' %}">Paintings</a></li>
+                      <li value="Patung"><a href="{% url 'Statue-list' %}">Statues</a></li>
+                      <li value="Kriya"><a href="{% url 'Craft-list' %}">Crafts</a></li>
                     </ul>
                   </div>
                   <div class="filtermenu temakarya">
-                    <a id="link2">Tema +</a>
+                    <a id="link2">Themes +</a>
                     <ul id="jenistema" class="jenisbenda">
-                      <li><a href="{% url 'potret-list' %}">Potret dan Sensualitas</a></li>
-                      <li><a href="{% url 'alam-list' %}">Alam dan Benda</a></li>
-                      <li><a href="{% url 'alamkota-list' %}">Pemandangan Alam dan Kota</a></li>
-                      <li><a href="{% url 'juang-list' %}">Perjuangan dan Potret Para Pejuang</a></li>
-                      <li><a href="{% url 'tradisi-list' %}">Tradisi/Budaya/Mitologi/Keseharian</a></li>
+                     <li><a href="{% url 'potrait-list' %}">Potraits and Sensuality</a></li>
+                      <li><a href="{% url 'nature-list' %}">Still life</a></li>
+                      <li><a href="{% url 'landscape-list' %}">Landscape</a></li>
+                      <li><a href="{% url 'heroes-list' %}">Warfare abd potraits of heroes</a></li>
+                      <li><a href="{% url 'tradition-list' %}">Tradition/Culture/Mythology/Activities</a></li>
                     </ul>
                   </div>
 
@@ -40,7 +39,7 @@
                 <div class="formsearchkarya">
                   <form method="GET" action="">
                     <input type="text" name="q" placeholder="Search collection and artist">
-                    <i class="fa fa-search" aria-hidden="true"></i>
+                    <i class="fa fa-search" id="filsearch" aria-hidden="true"></i>
                   </a>
                 </form>
                 </div>
