--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -74,7 +74,7 @@
                 </ul>
               </li>
               <li><a href="#">Publikasi</a></li>
-              <li><a href="{% url 'news-list' %}">Berita</a></li>
+              <li><a href="{% url 'berita-list' %}">Berita</a></li>
               <li><a href="{% url 'tentang-kami' %}">Tentang Kami</a></li>
               <li><a href="{% url 'searching' %}"><i class="fa fa-search"></i></a></li>
 
