--- a/ensites/templates/art/index.html
+++ b/ensites/templates/art/index.html
@@ -21,17 +21,17 @@
                     <ul id="jenisbenda" class="jenisbenda" name="featured">
                       <li value="Lukisan"><a href="{% url 'Painting-list' %}">Paintings</a></li>
                       <li value="Patung"><a href="{% url 'Statue-list' %}">Statues</a></li>
-                      <li value="Kriya"><a href="{% url 'Craft-list' %}">Crafts</a></li>
+                      <li value="Kriya"><a href="{% url 'Craft-list' %}">Handicrafts</a></li>
                     </ul>
                   </div>
                   <div class="filtermenu temakarya">
                     <a id="link2">Themes +</a>
                     <ul id="jenistema" class="jenisbenda">
                      <li><a href="{% url 'potrait-list' %}">Potraits and Sensuality</a></li>
-                      <li><a href="{% url 'nature-list' %}">Still life</a></li>
+                      <li><a href="{% url 'nature-list' %}">Still Life</a></li>
                       <li><a href="{% url 'landscape-list' %}">Landscape</a></li>
-                      <li><a href="{% url 'heroes-list' %}">Warfare abd potraits of heroes</a></li>
-                      <li><a href="{% url 'tradition-list' %}">Tradition/Culture/Mythology/Activities</a></li>
+                      <li><a href="{% url 'heroes-list' %}">War scenes and Potraits of Heroes</a></li>
+                      <li><a href="{% url 'tradition-list' %}">Tradition/Culture/Mythology/Daily Activities</a></li>
                     </ul>
                   </div>
 
