--- a/ensites/templates/enbase.html
+++ b/ensites/templates/enbase.html
@@ -52,12 +52,12 @@
 
             <ul class="cbp-hsmenu" id="menuall">
               <li>
-                <a href="#">Collection</a>
+                <a href="#">Collections</a>
                 <ul class="cbp-hssubmenu">
                   <li class="menufirst"><a href="#"><i>Art Collections</i></a></li>
                   <li><a href="{% url 'painter-list' %}">Paintings</a></li>
                   <li><a href="{% url 'sculptor-list' %}">Statues</a></li>
-                  <li><a href="{% url 'craftman-list' %}">Crafts</a></li>
+                  <li><a href="{% url 'craftman-list' %}">Handicrafts</a></li>
                 </ul>
               </li>
               <li><a href="{% url 'art-list' %}">Gallery</a></li>
