--- a/singgasanaseni/templates/perupa/index.html
+++ b/singgasanaseni/templates/perupa/index.html
@@ -21,7 +21,7 @@
                   <!--filter-->
                   <div class="filtermenu">
                     <a href="{% url 'Perupa-list' %}" class="current">ALL</a>
-                    <a href="{% url 'A-kriya' %}">A</a>
+                    <a href="{% url 'A-list' %}">A</a>
                     <a href="{% url 'B-list' %}">B</a>
                     <a href="{% url 'C-list' %}">C</a>
                     <a href="{% url 'D-list' %}">D</a>
