perbaikan ordering admin, perbaikan css homepage

--- a/ensites/templates/enbase.html
+++ b/ensites/templates/enbase.html
@@ -52,7 +52,7 @@
 
             <ul class="cbp-hsmenu" id="menuall">
               <li>
-                <a href="#">Collections</a>
+                <a href="#">Artists</a>
                 <ul class="cbp-hssubmenu">
                   <li class="menufirst"><a href="#"><i>Art Collections</i></a></li>
                   <li><a href="{% url 'painter-list' %}">Paintings</a></li>
