--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -52,7 +52,7 @@
 
             <ul class="cbp-hsmenu" id="menuall">
               <li>
-                <a href="#">Koleksi</a>
+                <a href="#">Perupa</a>
                 <ul class="cbp-hssubmenu">
                   <li class="menufirst"><a href="#"><i>Koleksi benda seni</i></a></li>
                   <li><a href="{% url 'Perupa-list' %}">Lukisan</a></li>
