--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -91,7 +91,7 @@
           <div class="row">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi">
-                <h3>News</h3>
+                <h3>Berita</h3>
                 <a href="{% url 'news-list'  %}">View All</a>
               </span>
             </div>
