--- a/singgasanaseni/templates/karya/index.html
+++ b/singgasanaseni/templates/karya/index.html
@@ -9,7 +9,7 @@
           <div class="row">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi divkarya">
-                <h3>Koleksi > Lukisan</h3>
+                <h3>Koleksi</h3>
               </span>
               <div class="sectionfilter">
                 <div class="filterkarya">
