--- a/singgasanaseni/templates/perupa/index2.html
+++ b/singgasanaseni/templates/perupa/index2.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load svg %}
-<!DOCTYPE html>
+
 
 
 
@@ -13,40 +13,40 @@
           <div class="row">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi divkarya">
-                <h3>Perajin</h3>
+                <h3>Perupa</h3>
               </span>
               <div class="sectionfilter">
                 <div class="filterkarya">
                   <label class="filtermenu" style="padding: 0;">Filter</label>
                   <!--filter-->
                   <div class="filtermenu">
-                    <a href="{% url 'Pengrajin-list' %}" class="current">ALL</a>
-                    <a href="{% url 'A-kriya' %}">A</a>
-                    <a href="{% url 'B-kriya' %}">B</a>
-                    <a href="{% url 'C-kriya' %}">C</a>
-                    <a href="{% url 'D-kriya' %}">D</a>
-                    <a href="{% url 'E-kriya' %}">E</a>
-                    <a href="{% url 'F-kriya' %}">F</a>
-                    <a href="{% url 'G-kriya' %}" >G</a>
-                    <a href="{% url 'H-kriya' %}" >H</a>
-                    <a href="{% url 'I-kriya' %}" >I</a>
-                    <a href="{% url 'J-kriya' %}" >J</a>
-                    <a href="{% url 'K-kriya' %}" >K</a>
-                    <a href="{% url 'L-kriya' %}" >L</a>
-                    <a href="{% url 'M-kriya' %}" >M</a>
-                    <a href="{% url 'N-kriya' %}" >N</a>
-                    <a href="{% url 'O-kriya' %}" >O</a>
-                    <a href="{% url 'P-kriya' %}" >P</a>
-                    <a href="{% url 'Q-kriya' %}" >Q</a>
-                    <a href="{% url 'R-kriya' %}" >R</a>
-                    <a href="{% url 'S-kriya' %}" >S</a>
-                    <a href="{% url 'T-kriya' %}" >T</a>
-                    <a href="{% url 'U-kriya' %}" >U</a>
-                    <a href="{% url 'V-kriya' %}" >V</a>
-                    <a href="{% url 'W-kriya' %}" >W</a>
-                    <a href="{% url 'X-kriya' %}" >X</a>
-                    <a href="{% url 'Y-kriya' %}" >Y</a>
-                    <a href="{% url 'Z-kriya' %}" >Z</a>
+                    <a href="{% url 'Perupa-list' %}" class="current">ALL</a>
+                    <a href="{% url 'A-list' %}">A</a>
+                    <a href="{% url 'B-list' %}">B</a>
+                    <a href="{% url 'C-list' %}">C</a>
+                    <a href="{% url 'D-list' %}">D</a>
+                    <a href="{% url 'E-list' %}">E</a>
+                    <a href="{% url 'F-list' %}">F</a>
+                    <a href="{% url 'G-list' %}" >G</a>
+                    <a href="{% url 'H-list' %}" >H</a>
+                    <a href="{% url 'I-list' %}" >I</a>
+                    <a href="{% url 'J-list' %}" >J</a>
+                    <a href="{% url 'K-list' %}" >K</a>
+                    <a href="{% url 'L-list' %}" >L</a>
+                    <a href="{% url 'M-list' %}" >M</a>
+                    <a href="{% url 'N-list' %}" >N</a>
+                    <a href="{% url 'O-list' %}" >O</a>
+                    <a href="{% url 'P-list' %}" >P</a>
+                    <a href="{% url 'Q-list' %}" >Q</a>
+                    <a href="{% url 'R-list' %}" >R</a>
+                    <a href="{% url 'S-list' %}" >S</a>
+                    <a href="{% url 'T-list' %}" >T</a>
+                    <a href="{% url 'U-list' %}" >U</a>
+                    <a href="{% url 'V-list' %}" >V</a>
+                    <a href="{% url 'W-list' %}" >W</a>
+                    <a href="{% url 'X-list' %}" >X</a>
+                    <a href="{% url 'Y-list' %}" >Y</a>
+                    <a href="{% url 'Z-list' %}" >Z</a>
                   </div>
                 </div>
                 <div class="formsearchkarya">
@@ -82,7 +82,7 @@
               </span>
             </div>
            <div class="container">
-            {% for Perupa in perupa.object_list %}
+            {% for Perupa in karyarelated.object_list %}
             <div class="{{ Perupa.Panggilan | slice:"1" | lower }}">
                 <div class="row col-md-12">
                     <div class="col-md-2">
