tagging dan berita relate

--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -65,12 +65,12 @@
                 <a href="#">Istana</a>
                 <ul class="cbp-hssubmenu">
                   <li class="menufirst"><a href="#"><i>Istana kepresidenan</i></a></li>
-                  <li><a href="{% url 'palace-merdeka' %}">Istana Merdeka</a></li>
-                  <li><a href="{% url 'palace-negara' %}">Istana Negara</a></li>
-                  <li><a href="{% url 'palace-bogor' %}">Istana Bogor</a></li>
-                  <li><a href="{% url 'palace-tampaksiring' %}">Istana Tampaksiring</a></li>
-                  <li><a href="{% url 'palace-cipanas' %}">Istana Cipanas</a></li>
-                  <li><a href="{% url 'palace-yogyakarta' %}">Istana Yogyakarta</a></li>
+                  <li><a href="{% url 'istana-merdeka' %}">Istana Merdeka</a></li>
+                  <li><a href="{% url 'istana-negara' %}">Istana Negara</a></li>
+                  <li><a href="{% url 'istana-bogor' %}">Istana Bogor</a></li>
+                  <li><a href="{% url 'istana-tampaksiring' %}">Istana Tampaksiring</a></li>
+                  <li><a href="{% url 'istana-cipanas' %}">Istana Cipanas</a></li>
+                  <li><a href="{% url 'istana-yogyakarta' %}">Istana Yogyakarta</a></li>
                 </ul>
               </li>
               <li><a href="#">Publikasi</a></li>
