--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -14,8 +14,8 @@
     <title>Singgasanaseni</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{%  static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/animate.css' %}" />
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/animate.css' %}" rel="stylesheet"  />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
     <!-- Custom Fonts -->
@@ -25,6 +25,7 @@
 
     <!-- Custom CSS -->
     <link href="{% static 'css/stylish-portfolio.min.css' %}" rel="stylesheet">
+
     <script src="{% static 'js/modernizr.custom.js' %}"></script>
 
     {% block css %}
