--- a/singgasanaseni/templates/istana/istanabogor.html
+++ b/singgasanaseni/templates/istana/istanabogor.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
+{% block css %}
+<link href="{% static 'css/detail.css' %}" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
 
@@ -47,7 +50,7 @@
                 <font>gaya arsitektur</font><br>
                 <label>loremupsim <br>loremspid loremipsum loremspid</label>
             </div>
-             <div class="col-md-7">
+                <div class="col-md-7">
                 <p>
                     Vue du Palais de Buitenzorg (1842)<br>
                     Ketika Istana Buitenzorg pertama kali didirikan pada pertengahan abad ke-18, wilayah yang kelak bernama Bogor masih berupa sebuah kampung. Bantaran Sungai Cisadane dan Sungai Ciliwung yang sejuk dan tenang itu semula hanya dihuni beberapa warga yang menggarap lahan subur di sekitarnya. Pada masa itu, daerah yang dikelilingi oleh Gunung-gunung Salak, Pangrango, Pancar, dan Kapur ini telah menjadi bagian (ommelanden) dari “district Jacatra,” tidak lagi tersisa kejayaan masa lalunya sebagai pusat Kerajaan Sunda.<br>
@@ -64,13 +67,82 @@
                     Pada akhir 1949, Istana Bogor diserahkan secara resmi oleh Kerajaan Belanda kepada Pemerintah Republik Indonesia. Hanya lima buah cermin besar yang masih tergantung di dinding menjadi barang inventaris Istana Bogor yang diserahkan kepada bangsa Indonesia ketika itu.<br>
                     Pemugaran Istana Bogor dipercepat menjelang sebuah pertemuan politik pemimpin lima negara sebagai tindak-lanjut dari pertemuan serupa di Colombo pada 1954 yang belum mencapai kata sepakat. Perdana Menteri Ali Sastroamidjojo mengundang para Perdana Menteri India, Burma, Sri Lanka, dan Pakistan untuk melanjutkan pembicaraan di Indonesia.<br>
                     Menjelang 1960, Istana Bogor menjalankan fungsi yang sama dengan Istana Merdeka dan Istana Negara di Jakarta: sebagai tempat kediaman sekaligus tempat kerja Presiden Republik Indonesia. Di Istana Bogor pula Bung Karno mencanangkan pembentukan Komando Mandala Pembebasan Irian pada 31 Desember 1961.
-
-
-
                 </p>
             </div>
-
           </div>
+          <hr>
+          <section id="gallery">
+              <div class="container">
+                <div id="image-gallery">
+                  <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaBogor/istana bogor.jpg' %}"><img src="{% static 'img/istana/IstanaBogor/istana bogor.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaBogor/6.jpg' %}"><img src="{% static 'img/istana/IstanaBogor/istana bogor .jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaBogor/7.jpg' %}"><img src="{% static 'img/istana/IstanaBogor/7.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaBogor/8.jpg' %}"><img src="{% static 'img/istana/IstanaBogor/8.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaBogor/9.jpg' %}"><img src="{% static 'img/istana/IstanaBogor/9.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaBogor/Halaman Depan Istana Bogor.jpg' %}"><img src="{% static 'img/istana/IstanaBogor/Halaman Depan Istana Bogor.jpg' %}"  class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaBogor/ istana bogor.jpg' %}"><img src="{% static 'img/istana/IstanaBogor/ istana bogor.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaBogor/istana  bogor.jpg' %}"><img src="{% static 'img/istana/IstanaBogor/istana  bogor.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div><!-- End row -->
+                </div><!-- End image gallery -->
+              </div><!-- End container -->
+          </section>
       </div>
     </article>
 
@@ -88,15 +160,95 @@
     <!-- Custom scripts for this template -->
     <script src="{% static 'js/stylish-portfolio.min.js' %}"></script>
 
-
     <script>
-    function openSearch() {
-        document.getElementById("myOverlay").style.display = "block";
+    // Gallery image hover
+    $( ".img-wrapper" ).hover(
+    function() {
+    $(this).find(".img-overlay").animate({opacity: 1}, 600);
+    }, function() {
+    $(this).find(".img-overlay").animate({opacity: 0}, 600);
     }
+    );
 
-    function closeSearch() {
-        document.getElementById("myOverlay").style.display = "none";
+    // Lightbox
+    var $overlay = $('<div id="overlay"></div>');
+    var $image = $("<img>");
+    var $prevButton = $('<div id="prevButton"><i class="fa fa-chevron-left"></i></div>');
+    var $nextButton = $('<div id="nextButton"><i class="fa fa-chevron-right"></i></div>');
+    var $exitButton = $('<div id="exitButton"><i class="fa fa-times"></i></div>');
+
+    // Add overlay
+    $overlay.append($image).prepend($prevButton).append($nextButton).append($exitButton);
+    $("#gallery").append($overlay);
+
+    // Hide overlay on default
+    $overlay.hide();
+
+    // When an image is clicked
+    $(".img-overlay").click(function(event) {
+    // Prevents default behavior
+    event.preventDefault();
+    // Adds href attribute to variable
+    var imageLocation = $(this).prev().attr("href");
+    // Add the image src to $image
+    $image.attr("src", imageLocation);
+    // Fade in the overlay
+    $overlay.fadeIn("slow");
+    });
+
+    // When the overlay is clicked
+    $overlay.click(function() {
+    // Fade out the overlay
+    $(this).fadeOut("slow");
+    });
+
+    // When next button is clicked
+    $nextButton.click(function(event) {
+    // Hide the current image
+    $("#overlay img").hide();
+    // Overlay image location
+    var $currentImgSrc = $("#overlay img").attr("src");
+    // Image with matching location of the overlay image
+    var $currentImg = $('#image-gallery img[src="' + $currentImgSrc + '"]');
+    // Finds the next image
+    var $nextImg = $($currentImg.closest(".image").next().find("img"));
+    // All of the images in the gallery
+    var $images = $("#image-gallery img");
+    // If there is a next image
+    if ($nextImg.length > 0) {
+    // Fade in the next image
+    $("#overlay img").attr("src", $nextImg.attr("src")).fadeIn(800);
+    } else {
+    // Otherwise fade in the first image
+    $("#overlay img").attr("src", $($images[0]).attr("src")).fadeIn(800);
     }
+    // Prevents overlay from being hidden
+    event.stopPropagation();
+    });
+
+    // When previous button is clicked
+    $prevButton.click(function(event) {
+    // Hide the current image
+    $("#overlay img").hide();
+    // Overlay image location
+    var $currentImgSrc = $("#overlay img").attr("src");
+    // Image with matching location of the overlay image
+    var $currentImg = $('#image-gallery img[src="' + $currentImgSrc + '"]');
+    // Finds the next image
+    var $nextImg = $($currentImg.closest(".image").prev().find("img"));
+    // Fade in the next image
+    $("#overlay img").attr("src", $nextImg.attr("src")).fadeIn(800);
+    // Prevents overlay from being hidden
+    event.stopPropagation();
+    });
+
+    // When the exit button is clicked
+    $exitButton.click(function() {
+    // Fade out the overlay
+    $("#overlay").fadeOut("slow");
+    });
+
     </script>
+
 
 {% endblock js %}
