--- a/singgasanaseni/templates/istana/istanamerdeka.html
+++ b/singgasanaseni/templates/istana/istanamerdeka.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
+{% block css %}
+<link href="{% static 'css/detail.css' %}" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
 
@@ -64,6 +67,79 @@
             </div>
 
           </div>
+          <hr>
+          <section id="gallery">
+              <div class="container">
+                <div id="image-gallery">
+                  <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaMerdeka/1.jpg' %}"><img src="{% static 'img/istana/IstanaMerdeka/1.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaMerdeka/2.jpg' %}"><img src="{% static 'img/istana/IstanaMerdeka/2.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaMerdeka/3.jpg' %}"><img src="{% static 'img/istana/IstanaMerdeka/3.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaMerdeka/4.jpg' %}"><img src="{% static 'img/istana/IstanaMerdeka/4.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <!--div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaMerdeka/9.jpg' %}"><img src="{% static 'img/istana/IstanaMerdeka/9.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaMerdeka/Halaman Depan Istana Bogor.jpg' %}"><img src="{% static 'img/istana/IstanaMerdeka/Halaman Depan Istana Bogor.jpg' %}"  class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaMerdeka/ istana bogor.jpg' %}"><img src="{% static 'img/istana/IstanaMerdeka/ istana bogor.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaMerdeka/istana  bogor.jpg' %}"><img src="{% static 'img/istana/IstanaMerdeka/istana  bogor.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div-->
+                  </div><!-- End row -->
+                </div><!-- End image gallery -->
+              </div><!-- End container -->
+          </section>
       </div>
     </article>
 
@@ -82,14 +158,94 @@
     <script src="{% static 'js/stylish-portfolio.min.js' %}"></script>
 
 
-    <script>
-    function openSearch() {
-        document.getElementById("myOverlay").style.display = "block";
+     <script>
+    // Gallery image hover
+    $( ".img-wrapper" ).hover(
+    function() {
+    $(this).find(".img-overlay").animate({opacity: 1}, 600);
+    }, function() {
+    $(this).find(".img-overlay").animate({opacity: 0}, 600);
     }
+    );
 
-    function closeSearch() {
-        document.getElementById("myOverlay").style.display = "none";
+    // Lightbox
+    var $overlay = $('<div id="overlay"></div>');
+    var $image = $("<img>");
+    var $prevButton = $('<div id="prevButton"><i class="fa fa-chevron-left"></i></div>');
+    var $nextButton = $('<div id="nextButton"><i class="fa fa-chevron-right"></i></div>');
+    var $exitButton = $('<div id="exitButton"><i class="fa fa-times"></i></div>');
+
+    // Add overlay
+    $overlay.append($image).prepend($prevButton).append($nextButton).append($exitButton);
+    $("#gallery").append($overlay);
+
+    // Hide overlay on default
+    $overlay.hide();
+
+    // When an image is clicked
+    $(".img-overlay").click(function(event) {
+    // Prevents default behavior
+    event.preventDefault();
+    // Adds href attribute to variable
+    var imageLocation = $(this).prev().attr("href");
+    // Add the image src to $image
+    $image.attr("src", imageLocation);
+    // Fade in the overlay
+    $overlay.fadeIn("slow");
+    });
+
+    // When the overlay is clicked
+    $overlay.click(function() {
+    // Fade out the overlay
+    $(this).fadeOut("slow");
+    });
+
+    // When next button is clicked
+    $nextButton.click(function(event) {
+    // Hide the current image
+    $("#overlay img").hide();
+    // Overlay image location
+    var $currentImgSrc = $("#overlay img").attr("src");
+    // Image with matching location of the overlay image
+    var $currentImg = $('#image-gallery img[src="' + $currentImgSrc + '"]');
+    // Finds the next image
+    var $nextImg = $($currentImg.closest(".image").next().find("img"));
+    // All of the images in the gallery
+    var $images = $("#image-gallery img");
+    // If there is a next image
+    if ($nextImg.length > 0) {
+    // Fade in the next image
+    $("#overlay img").attr("src", $nextImg.attr("src")).fadeIn(800);
+    } else {
+    // Otherwise fade in the first image
+    $("#overlay img").attr("src", $($images[0]).attr("src")).fadeIn(800);
     }
+    // Prevents overlay from being hidden
+    event.stopPropagation();
+    });
+
+    // When previous button is clicked
+    $prevButton.click(function(event) {
+    // Hide the current image
+    $("#overlay img").hide();
+    // Overlay image location
+    var $currentImgSrc = $("#overlay img").attr("src");
+    // Image with matching location of the overlay image
+    var $currentImg = $('#image-gallery img[src="' + $currentImgSrc + '"]');
+    // Finds the next image
+    var $nextImg = $($currentImg.closest(".image").prev().find("img"));
+    // Fade in the next image
+    $("#overlay img").attr("src", $nextImg.attr("src")).fadeIn(800);
+    // Prevents overlay from being hidden
+    event.stopPropagation();
+    });
+
+    // When the exit button is clicked
+    $exitButton.click(function() {
+    // Fade out the overlay
+    $("#overlay").fadeOut("slow");
+    });
+
     </script>
 
 {% endblock js %}
