--- a/singgasanaseni/templates/perupa/detail.html
+++ b/singgasanaseni/templates/perupa/detail.html
@@ -27,11 +27,15 @@
                       </div>
                     <hr>
                     <div class="beritarelated">
-                    <h3>Berita Terkait {{ Perupa.Panggilan }}</h3>
+                    <h4>Berita Terkait {{ Perupa.Panggilan }}</h4>
                     {% for berita in beritarelated %}
 
-                    <p><a href="/berita/#{{ berita.Judul | slugify }}">{{ berita.Judul }}</a></p>
-
+                    <ul>
+                        <li>
+                            <a href="/berita/#{{ berita.Judul | slugify }}"><b>{{ berita.Judul }}</b></a><br>
+                            <i>{{ berita.Sumber }}</i>
+                        </li>
+                    </ul>
 
                     {% endfor %}
                     </div>
