--- a/singgasanaseni/templates/karya/index.html
+++ b/singgasanaseni/templates/karya/index.html
@@ -32,6 +32,7 @@
                       <li><a href="{% url 'alamkota-list' %}">Pemandangan Alam dan Kota</a></li>
                       <li><a href="{% url 'juang-list' %}">Perjuangan dan Potret Para Pejuang</a></li>
                       <li><a href="{% url 'tradisi-list' %}">Tradisi/Budaya/Mitologi/Keseharian</a></li>
+                      <li><a href="{% url 'nude-list' %}">Fine Art/Koleksi Terbatas</a></li>
                     </ul>
                   </div>
 
