perbaikan data istana

--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -96,7 +96,7 @@
           <a href="#">Privacy Policy</a>
         </span>
         <span>
-          <a href="#">Sitemap</a>
+          <a href="/sitemap.xml">Sitemap</a>
         </span>
         <span class="rightfoot">
             <label><label><a href="{% url 'homepage-en' %}">EN </a>/<a href="{% url 'homepage-views' %}"> ID</a></label></label>
