--- a/singgasanaseni/templates/istana/istanabogor.html
+++ b/singgasanaseni/templates/istana/istanabogor.html
@@ -44,11 +44,11 @@
           <div class="row sectionistana">
             <div class="col-md-3 sidebaristana">
                 <h3>Istana Bogor</h3>
-                <label>Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum</label><br>
-                <font>konstruksi awal</font><br>
-                <label>1842</label><br>
-                <font>gaya arsitektur</font><br>
-                <label>loremupsim <br>loremspid loremipsum loremspid</label>
+                <label>Jl. Ir. Haji Djuanda No.1, Paledang, Bogor Tengah, Kota Bogor, Jawa Barat 16122</label><br>
+                <font>Konstruksi awal</font><br>
+                <label>1745</label><br>
+                <font>Gaya arsitektur</font><br>
+                <label>Palladio architecture</label>
             </div>
                 <div class="col-md-7">
                 <p>
