--- a/singgasanaseni/templates/istana/istanacipanas.html
+++ b/singgasanaseni/templates/istana/istanacipanas.html
@@ -44,11 +44,11 @@
           <div class="row sectionistana">
             <div class="col-md-3 sidebaristana">
                 <h3>Istana Cipanas</h3>
-                <label>Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum</label><br>
-                <font>konstruksi awal</font><br>
-                <label>1744</label><br>
-                <font>gaya arsitektur</font><br>
-                <label>loremupsim <br>loremspid loremipsum loremspid</label>
+                <label>Jl. Raya Cipanas No.105, Cipanas, Kabupaten Cianjur, Jawa Barat 43253</label><br>
+                <font>Konstruksi awal</font><br>
+                <label>1740</label><br>
+                <!--font>Gaya arsitektur</font><br>
+                <label>loremupsim <br>loremspid loremipsum loremspid</label-->
             </div>
              <div class="col-md-7">
                 <p>
