--- a/singgasanaseni/templates/istana/istanamerdeka.html
+++ b/singgasanaseni/templates/istana/istanamerdeka.html
@@ -44,11 +44,11 @@
           <div class="row sectionistana">
             <div class="col-md-3 sidebaristana">
                 <h3>Istana Merdeka</h3>
-                <label>Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum</label><br>
-                <font>konstruksi awal</font><br>
-                <label>1796</label><br>
-                <font>gaya arsitektur</font><br>
-                <label>loremupsim <br>loremspid loremipsum loremspid</label>
+                <label>Jl. Medan Merdeka Utara, RT.2/RW.3, Gambir, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta 10110</label><br>
+                <font>Konstruksi awal</font><br>
+                <label>1873</label><br>
+                <font>Gaya arsitektur</font><br>
+                <label>Palladian architecture</label>
             </div>
              <div class="col-md-7">
                 <p>
