--- a/singgasanaseni/templates/istana/istananegara.html
+++ b/singgasanaseni/templates/istana/istananegara.html
@@ -44,20 +44,21 @@
           <div class="row sectionistana">
             <div class="col-md-3 sidebaristana">
                 <h3>Istana Negara</h3>
-                <label>Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum</label><br>
-                <font>konstruksi awal</font><br>
-                <label>1744</label><br>
-                <font>gaya arsitektur</font><br>
-                <label>loremupsim <br>loremspid loremipsum loremspid</label>
+                <label>Jl. Medan Merdeka Utara Gambir, Jakarta 10160, Indonesia</label><br>
+                <font>Konstruksi awal</font><br>
+                <label>1873</label><br>
+                <font>Gaya arsitektur</font><br>
+                <label>Palladian architecture</label>
             </div>
              <div class="col-md-7">
                 <p>
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                     Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
+                    Istana kepresidenan di Jakarta terdiri dari dua bangunan utama yang disebut Istana Negara dan Istana Merdeka. Kedua istana ini merupakan dua buah bangunan utama yang luasnya 6,8 dan terletak di antara Jalan Medan Merdeka Utara dan Jalan Veteran, serta dikelilingi sejumlah bangunan yang sering digunakan kegiatan kenegaraan.
+                    <br>
+                    Posisi Istana Merdeka menghadap ke Taman Monumen Nasional (Jalan Medan Merdeka Utara), dan Istana Negara yang menghadap ke Sungai Ciliwung (Jalan Veteran). Kedua bangunan itu berada di kawasan yang dimasa lalu bernama Weltervreden (dalam bahasa Belanda berarti ”sangat memuaskan”)’ Kawasan ini dihuni para elit pejabat dan pengusaha Belanda dengan rumah-rumahnya yang besar (loji). Weltervreden adalah kawasan yang tertata cantik dengan pohon-pohon yang dipangkas rapi seperti di taman-taman Eropa.
+                    <br>
+                    Gedung Istana Negara berumur lebih tua dan mulai dibangun pada 1796 masa pemerintahan Gubernur Jenderal Pieter Gerardus van Overstraten dan selesai pada 1804 masa Gubernur Jenderal Johannes Siberg. Gedung ini semula adalah rumah peristirahatan milik pengusaha Belanda, Jacob Andries van Braam di jalan Rijkswijk (sekarang Jalan Veteran). Gedung ini lalu dikenal dengan sebutan Istana Rijswijk .
+                    <br>
+                    Pada 1821 rumah peristirahatan van Braam dibeli oleh pemerintah kolonial sebagai pusat kegiatan pemerintahan serta tempat tinggal para Gubernur Jenderal di Batavia (Jakarta). Di Istana Rijswijk ini pada 1829 Gubernur Jenderal G.A.G. baron Van Der Capellen mendengarkan rancana Jenderal Hendrik Merkus baron De Kock untuk menumpas pemberontakan Diponegoro. Di istana ini pula Guvbernur Jendral Graaf Van Den Bosch mulai membuat kebijakan sistem tanam paksa atau cultuur stelsel, sistem yang menguntungkan pundi-pundi pemerintah kolonial dan menciptakan kesengsaraan para petani.
                 </p>
             </div>
 
