--- a/singgasanaseni/templates/istana/istanatampaksiring.html
+++ b/singgasanaseni/templates/istana/istanatampaksiring.html
@@ -44,11 +44,11 @@
           <div class="row sectionistana">
             <div class="col-md-3 sidebaristana">
                 <h3>Istana Tampak Siring</h3>
-                <label>Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum</label><br>
-                <font>konstruksi awal</font><br>
-                <label>1744</label><br>
-                <font>gaya arsitektur</font><br>
-                <label>loremupsim <br>loremspid loremipsum loremspid</label>
+                <label>Jl. Dr. Ir. Soekarno, Manukaya, Tampaksiring, Kabupaten Gianyar, Bali 80552</label><br>
+                <font>Konstruksi awal</font><br>
+                <label>1957</label><br>
+                <font>Gaya arsitektur</font><br>
+                <label>Arsitektur modern dipadukan dengan arsitektur Bali</label>
             </div>
              <div class="col-md-7">
                 <p>
