--- a/singgasanaseni/templates/istana/istanayogyakarta.html
+++ b/singgasanaseni/templates/istana/istanayogyakarta.html
@@ -44,11 +44,11 @@
           <div class="row sectionistana">
             <div class="col-md-3 sidebaristana">
                 <h3>Istana Yogyakarta</h3>
-                <label>Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum</label><br>
-                <font>konstruksi awal</font><br>
-                <label>1744</label><br>
-                <font>gaya arsitektur</font><br>
-                <label>loremupsim <br>loremspid loremipsum loremspid</label>
+                <label>Jl. Ahmad Yani, Ngupasan, Gondomanan, Ngupasan, Yogyakarta, Kota Yogyakarta, Daerah Istimewa Yogyakarta 55122</label><br>
+                <font>Konstruksi awal</font><br>
+                <label>1824</label><br>
+                <!--font>Gaya arsitektur</font><br>
+                <label>Tradisional </label-->
             </div>
              <div class="col-md-7">
                 <p>
