--- a/singgasanaseni/templates/search/view.html
+++ b/singgasanaseni/templates/search/view.html
@@ -67,7 +67,7 @@
                 </div>
               </div>
 
-          {% elif klass == 'news' %}
+          {% elif klass == 'berita' %}
               <div class="container">
               <hr>
                 <div class="row">
