penambahan bahasa mandarin

--- a/ensites/templates/palace/istanayogyakarta.html
+++ b/ensites/templates/palace/istanayogyakarta.html
@@ -1,5 +1,8 @@
-{% extends "enbase.html" %}
+{% extends "base.html" %}
 {% load static %}
+{% block css %}
+<link href="{% static 'css/detail.css' %}" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
 
@@ -41,24 +44,108 @@
           <div class="row sectionistana">
             <div class="col-md-3 sidebaristana">
                 <h3>Istana Yogyakarta</h3>
-                <label>Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum</label><br>
-                <font>konstruksi awal</font><br>
-                <label>1744</label><br>
-                <font>gaya arsitektur</font><br>
-                <label>loremupsim <br>loremspid loremipsum loremspid</label>
+                <label>Jl. Ahmad Yani, Ngupasan, Gondomanan, Ngupasan, Yogyakarta, Kota Yogyakarta, Daerah Istimewa Yogyakarta 55122</label><br>
+                <font>Konstruksi awal</font><br>
+                <label>1824</label><br>
+                <!--font>Gaya arsitektur</font><br>
+                <label>Tradisional </label-->
             </div>
              <div class="col-md-7">
                 <p>
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                     Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
+                    Tak ada Istana Kepresidenan yang berperan begitu penting di masa revolusi kemerdekaan kecuali Istana Yogyakarta. Ketika Belanda melakukan agresi militer pada 3 Januari 1946 untuk menduduki kembali bekas jajahannya, pemerintahan Republik Indonesia terpaksa mengungsi ke Yogyakarta, di mana Presiden Sukarno dan keluarganya menempati sebuah rumah yang pernah menjadi kediaman resmi residen Belanda. Bangunan itulah yang kini menjadi Istana Yogyakarta.<br>
+Dalam sejarahnya, bangunan yang lebih termasyhur dengan nama Gedung Agung di kalangan masyarakat setempat itu didirikan dengan memperhitungkan keberadaan sebuah benteng militer yang terletak tepat di depannya, di seberang jalan. Benteng yang dibangun pada 1767 itu sekarang masih tegak sebagai cagar budaya di sudut Jalan Malioboro dan Jalan Ahmad Yani yang bersebelahan dengan Pasar Beringharjo.<br>
+Mula-mula benteng itu bernama Rustenburg. Setelah gempa bumi pada 1867, ia dibangun kembali dan diganti namanya menjadi Vredenburg. Kedua nama itu mempunyai arti yang hampir mirip, yaitu kastil (benteng) damai. Nama yang sungguh berlawanan dengan fungsi bangunan! Sebab benteng itu dibangun dalam jarak tembak meriam ke arah Kraton Ngayogyakarta Hadiningrat untuk mencegah kemungkinan pembangkangan di lingkungan keraton Yogyakarta.<br>
+Dengan trauma dari Perang Jawa yang dipimpin Pangeran Diponegoro selama 1825–1830, pihak Belanda harus memperhitungkan tempat yang aman dan terlindung untuk memukimkan pejabat tingginya. Ada dua versi catatan yang mengisahkan bagaimana tempat tinggal yang demikian itu dibangun.<br>
+Catatan pertama menyebut bahwa pembangunan gedung ini dimulai pada 1755, bersamaan dengan pembangunan Keraton Ngayogyakarta Hadiningrat. Ketika itu Kerajaan Ngayogyakarta Hadiningrat baru saja terbentuk sebagai pecahan dari Kerajaan Mataram. Belanda yang ikut berperan dalam perpecahan itu mau tidak mau harus mendukung keinginan Sultan Hamengku Buwono I untuk mendirikan istana yang pantas. Maka, dibangunlah gedung yang tidak kalah anggun bagi kediaman resmi Residen Belanda di Yogyakarta.<br>
+Catatan kedua menyebut bahwa kediaman resmi residen itu baru dibangun pada Mei 1824, ketika Residen Anthonie Hendriks Smissaert memegang jabatan. Arsiteknya, A.A.J. Payen— yang juga guru seni lukis Raden Saleh—ditunjuk langsung oleh Gubernur Jenderal di Batavia. Belum selesai gedung dibangun, pecahlah Perang Jawa yang dipimpin Pangeran Diponegoro dan Residen Smissaert mengungsi ke dalam Benteng Vredenburg. Pembangunan dilanjutkan
+Sebuah kolam tua dengan rumah angin-angin. Terdapat di halaman belakang Istana Yogyakarta. lagi setelah Perang Diponegoro dan baru selesai pada 1832.<br>
+Gempa bumi meruntuhkan bangunan Residenan Yogyakarta itu. Di atas lahan yang sama segera didirikan bangunan baru dengan gaya arsitektur Eropa
+yang disesuaikan dengan iklim tropis.<br> Bangunan yang selesai
+pada 1869 itulah yang hingga kini merupakan bangunan utama Gedung Agung. Pada masa pendudukan Jepang, Gedung Agung menjadi kediaman resmi Koochi Zimmukyoku Tyookan, penguasa tertinggi Jepang di Yogyakarta. Setelah pengakuan kedaulatan pada 1949 dan Pemerintah Republik Indonesia kembali ke Jakarta, Gedung Agung beralih fungsi menjadi Gedung Negara Yogyakarta.<br>
+Pada 1961, Presiden Sukarno menyampaikan pidato Trikora di Alun-alun Yogyakarta dan menginap di Gedung Agung. Pidato itu demikian penting karena merupakan titik sejarah dalam merebut kembali Irian Barat menjadi bagian Ibu Pertiwi.<br>
+Seperti Istana Cipanas dan Istana Bogor, Istana Yogyakarta juga berdekatan dengan pasar besar. Istana Yogyakarta yang hanya selemparan batu dari Pasar Beringharjo, membuat para tamu Gedung Agung seakan mudah memperoleh nasi gudeg atau nasi langgi untuk sarapan.<br>
+Sama pula dengan Istana Bogor, di sebelah utara Istana Yogyakarta juga terdapat sebuah gereja Protestan. Gereja yang dibangun di zaman Belanda itu, sesuai dengan agama kebanyakan para residen dan gubernur Belanda, kini bernama GPIB Marga Mulya. Gedung Agung secara resmi diputuskan menjadi Istana Presiden Republik Indonesia pada 1972, dan dipergunakan sebagai tempat penginapan presiden dan para tamu negara di Yogyakarta. Sebelumnya, pengelolaan dan perawatan Gedung Agung sejak 1954 ditangani oleh Kepatihan Danurejan. Sejak 1972, Gedung Agung mengalami renovasi agar layak bagi kepala negara dan kepala pemerintahan.<br>
+Renovasi Gedung Agung Yogyakarta juga mengubah dinding-dindingnya yang semula ditutup kayu jati. Sama dengan yang terjadi di Istana Jakarta, renovasi Gedung Agung juga melibatkan penututupan beberapa beranda dan serambi terbuka menjadi ruang-ruang tertutup dengan dinding dan jendela. Detil eksterior Ruang Koleksi, dengan tiang penyangga bergaya art deco.<br>
+Kemudian, Istana Yogyakarta direnovasi secara terburu-buru untuk menyambut kedatangan Putra Mahkota Akihito (waktu itu belum menjadi Kaisar) dan Putri Michiko pada 1991. Istana Yogyakarta juga menyimpan sekitar 50 arca batu kuno yang ditemukan di daerah sekitar Yogyakarta. Arca-arca yang dikumpulkan para residen Belanda ini semula ditempatkan di Benteng Vredenburg. Semua arca itu kini dirawat dan dilestarikan di sebuah sudut halaman belakang Istana.<br>
+Istana Yogyakarta merupakan kompleks Istana Kepresidenan yang paling kecil dari istana- istana lainnya. Di atas lahan itu kini telah berdiri berbagai bangunan tambahan. Satu bangunan sudah dibangun pada masa Belanda, yakni untuk wakil residen, terletak di bagian selatan sisi depan. Bangunan itu sekarang diberi nama Wisma Indraprasta dan dipakai untuk penginapan para pejabat.<br>
+
                 </p>
             </div>
 
           </div>
+          <hr>
+          <section id="gallery">
+              <div class="container">
+                <div id="image-gallery">
+                  <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaYogyakarta/1.jpg' %}"><img src="{% static 'img/istana/IstanaYogyakarta/1.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaYogyakarta/2.jpg' %}"><img src="{% static 'img/istana/IstanaYogyakarta/2.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaYogyakarta/3.jpg' %}"><img src="{% static 'img/istana/IstanaYogyakarta/3.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaYogyakarta/4.jpg' %}"><img src="{% static 'img/istana/IstanaYogyakarta/4.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaYogyakarta/5.jpg' %}"><img src="{% static 'img/istana/IstanaYogyakarta/5.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaYogyakarta/6.jpg' %}"><img src="{% static 'img/istana/IstanaYogyakarta/6.jpg' %}"  class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <!--div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaYogyakarta/ istana bogor.jpg' %}"><img src="{% static 'img/istana/IstanaYogyakarta/ istana bogor.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaYogyakarta/istana  bogor.jpg' %}"><img src="{% static 'img/istana/IstanaYogyakarta/istana  bogor.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div-->
+                  </div><!-- End row -->
+                </div><!-- End image gallery -->
+              </div><!-- End container -->
+          </section>
       </div>
     </article>
 
@@ -78,13 +165,93 @@
 
 
     <script>
-    function openSearch() {
-        document.getElementById("myOverlay").style.display = "block";
+    // Gallery image hover
+    $( ".img-wrapper" ).hover(
+    function() {
+    $(this).find(".img-overlay").animate({opacity: 1}, 600);
+    }, function() {
+    $(this).find(".img-overlay").animate({opacity: 0}, 600);
     }
+    );
 
-    function closeSearch() {
-        document.getElementById("myOverlay").style.display = "none";
+    // Lightbox
+    var $overlay = $('<div id="overlay"></div>');
+    var $image = $("<img>");
+    var $prevButton = $('<div id="prevButton"><i class="fa fa-chevron-left"></i></div>');
+    var $nextButton = $('<div id="nextButton"><i class="fa fa-chevron-right"></i></div>');
+    var $exitButton = $('<div id="exitButton"><i class="fa fa-times"></i></div>');
+
+    // Add overlay
+    $overlay.append($image).prepend($prevButton).append($nextButton).append($exitButton);
+    $("#gallery").append($overlay);
+
+    // Hide overlay on default
+    $overlay.hide();
+
+    // When an image is clicked
+    $(".img-overlay").click(function(event) {
+    // Prevents default behavior
+    event.preventDefault();
+    // Adds href attribute to variable
+    var imageLocation = $(this).prev().attr("href");
+    // Add the image src to $image
+    $image.attr("src", imageLocation);
+    // Fade in the overlay
+    $overlay.fadeIn("slow");
+    });
+
+    // When the overlay is clicked
+    $overlay.click(function() {
+    // Fade out the overlay
+    $(this).fadeOut("slow");
+    });
+
+    // When next button is clicked
+    $nextButton.click(function(event) {
+    // Hide the current image
+    $("#overlay img").hide();
+    // Overlay image location
+    var $currentImgSrc = $("#overlay img").attr("src");
+    // Image with matching location of the overlay image
+    var $currentImg = $('#image-gallery img[src="' + $currentImgSrc + '"]');
+    // Finds the next image
+    var $nextImg = $($currentImg.closest(".image").next().find("img"));
+    // All of the images in the gallery
+    var $images = $("#image-gallery img");
+    // If there is a next image
+    if ($nextImg.length > 0) {
+    // Fade in the next image
+    $("#overlay img").attr("src", $nextImg.attr("src")).fadeIn(800);
+    } else {
+    // Otherwise fade in the first image
+    $("#overlay img").attr("src", $($images[0]).attr("src")).fadeIn(800);
     }
+    // Prevents overlay from being hidden
+    event.stopPropagation();
+    });
+
+    // When previous button is clicked
+    $prevButton.click(function(event) {
+    // Hide the current image
+    $("#overlay img").hide();
+    // Overlay image location
+    var $currentImgSrc = $("#overlay img").attr("src");
+    // Image with matching location of the overlay image
+    var $currentImg = $('#image-gallery img[src="' + $currentImgSrc + '"]');
+    // Finds the next image
+    var $nextImg = $($currentImg.closest(".image").prev().find("img"));
+    // Fade in the next image
+    $("#overlay img").attr("src", $nextImg.attr("src")).fadeIn(800);
+    // Prevents overlay from being hidden
+    event.stopPropagation();
+    });
+
+    // When the exit button is clicked
+    $exitButton.click(function() {
+    // Fade out the overlay
+    $("#overlay").fadeOut("slow");
+    });
+
     </script>
 
 {% endblock js %}
