--- a/ensites/templates/palace/istananegara.html
+++ b/ensites/templates/palace/istananegara.html
@@ -1,5 +1,8 @@
-{% extends "enbase.html" %}
+{% extends "base.html" %}
 {% load static %}
+{% block css %}
+<link href="{% static 'css/detail.css' %}" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
 
@@ -41,24 +44,98 @@
           <div class="row sectionistana">
             <div class="col-md-3 sidebaristana">
                 <h3>Istana Negara</h3>
-                <label>Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum</label><br>
-                <font>konstruksi awal</font><br>
-                <label>1744</label><br>
-                <font>gaya arsitektur</font><br>
-                <label>loremupsim <br>loremspid loremipsum loremspid</label>
+                <label>Jl. Medan Merdeka Utara Gambir, Jakarta 10160, Indonesia</label><br>
+                <font>Konstruksi awal</font><br>
+                <label>1873</label><br>
+                <font>Gaya arsitektur</font><br>
+                <label>Palladian architecture</label>
             </div>
              <div class="col-md-7">
                 <p>
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                     Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
+                    Istana kepresidenan di Jakarta terdiri dari dua bangunan utama yang disebut Istana Negara dan Istana Merdeka. Kedua istana ini merupakan dua buah bangunan utama yang luasnya 6,8 dan terletak di antara Jalan Medan Merdeka Utara dan Jalan Veteran, serta dikelilingi sejumlah bangunan yang sering digunakan kegiatan kenegaraan.
+                    <br>
+                    Posisi Istana Merdeka menghadap ke Taman Monumen Nasional (Jalan Medan Merdeka Utara), dan Istana Negara yang menghadap ke Sungai Ciliwung (Jalan Veteran). Kedua bangunan itu berada di kawasan yang dimasa lalu bernama Weltervreden (dalam bahasa Belanda berarti ”sangat memuaskan”)’ Kawasan ini dihuni para elit pejabat dan pengusaha Belanda dengan rumah-rumahnya yang besar (loji). Weltervreden adalah kawasan yang tertata cantik dengan pohon-pohon yang dipangkas rapi seperti di taman-taman Eropa.
+                    <br>
+                    Gedung Istana Negara berumur lebih tua dan mulai dibangun pada 1796 masa pemerintahan Gubernur Jenderal Pieter Gerardus van Overstraten dan selesai pada 1804 masa Gubernur Jenderal Johannes Siberg. Gedung ini semula adalah rumah peristirahatan milik pengusaha Belanda, Jacob Andries van Braam di jalan Rijkswijk (sekarang Jalan Veteran). Gedung ini lalu dikenal dengan sebutan Istana Rijswijk .
+                    <br>
+                    Pada 1821 rumah peristirahatan van Braam dibeli oleh pemerintah kolonial sebagai pusat kegiatan pemerintahan serta tempat tinggal para Gubernur Jenderal di Batavia (Jakarta). Di Istana Rijswijk ini pada 1829 Gubernur Jenderal G.A.G. baron Van Der Capellen mendengarkan rancana Jenderal Hendrik Merkus baron De Kock untuk menumpas pemberontakan Diponegoro. Di istana ini pula Guvbernur Jendral Graaf Van Den Bosch mulai membuat kebijakan sistem tanam paksa atau cultuur stelsel, sistem yang menguntungkan pundi-pundi pemerintah kolonial dan menciptakan kesengsaraan para petani.
                 </p>
             </div>
 
           </div>
+          <hr>
+          <section id="gallery">
+              <div class="container">
+                <div id="image-gallery">
+                  <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaNegara/1.jpg' %}"><img src="{% static 'img/istana/IstanaNegara/1.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaNegara/2.jpg' %}"><img src="{% static 'img/istana/IstanaNegara/2.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaNegara/3.jpg' %}"><img src="{% static 'img/istana/IstanaNegara/3.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaNegara/4.jpg' %}"><img src="{% static 'img/istana/IstanaNegara/4.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaNegara/5.jpg' %}"><img src="{% static 'img/istana/IstanaNegara/5.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaNegara/6.jpg' %}"><img src="{% static 'img/istana/IstanaNegara/6.jpg' %}"  class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <!--div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaNegara/ istana bogor.jpg' %}"><img src="{% static 'img/istana/IstanaNegara/ istana bogor.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+                      <div class="img-wrapper">
+                        <a href="{% static 'img/istana/IstanaNegara/istana  bogor.jpg' %}"><img src="{% static 'img/istana/IstanaNegara/istana  bogor.jpg' %}" class="img-responsive"></a>
+                        <div class="img-overlay">
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        </div>
+                      </div>
+                    </div-->
+                  </div><!-- End row -->
+                </div><!-- End image gallery -->
+              </div><!-- End container -->
+          </section>
       </div>
     </article>
 
@@ -78,13 +155,93 @@
 
 
     <script>
-    function openSearch() {
-        document.getElementById("myOverlay").style.display = "block";
+    // Gallery image hover
+    $( ".img-wrapper" ).hover(
+    function() {
+    $(this).find(".img-overlay").animate({opacity: 1}, 600);
+    }, function() {
+    $(this).find(".img-overlay").animate({opacity: 0}, 600);
     }
+    );
 
-    function closeSearch() {
-        document.getElementById("myOverlay").style.display = "none";
+    // Lightbox
+    var $overlay = $('<div id="overlay"></div>');
+    var $image = $("<img>");
+    var $prevButton = $('<div id="prevButton"><i class="fa fa-chevron-left"></i></div>');
+    var $nextButton = $('<div id="nextButton"><i class="fa fa-chevron-right"></i></div>');
+    var $exitButton = $('<div id="exitButton"><i class="fa fa-times"></i></div>');
+
+    // Add overlay
+    $overlay.append($image).prepend($prevButton).append($nextButton).append($exitButton);
+    $("#gallery").append($overlay);
+
+    // Hide overlay on default
+    $overlay.hide();
+
+    // When an image is clicked
+    $(".img-overlay").click(function(event) {
+    // Prevents default behavior
+    event.preventDefault();
+    // Adds href attribute to variable
+    var imageLocation = $(this).prev().attr("href");
+    // Add the image src to $image
+    $image.attr("src", imageLocation);
+    // Fade in the overlay
+    $overlay.fadeIn("slow");
+    });
+
+    // When the overlay is clicked
+    $overlay.click(function() {
+    // Fade out the overlay
+    $(this).fadeOut("slow");
+    });
+
+    // When next button is clicked
+    $nextButton.click(function(event) {
+    // Hide the current image
+    $("#overlay img").hide();
+    // Overlay image location
+    var $currentImgSrc = $("#overlay img").attr("src");
+    // Image with matching location of the overlay image
+    var $currentImg = $('#image-gallery img[src="' + $currentImgSrc + '"]');
+    // Finds the next image
+    var $nextImg = $($currentImg.closest(".image").next().find("img"));
+    // All of the images in the gallery
+    var $images = $("#image-gallery img");
+    // If there is a next image
+    if ($nextImg.length > 0) {
+    // Fade in the next image
+    $("#overlay img").attr("src", $nextImg.attr("src")).fadeIn(800);
+    } else {
+    // Otherwise fade in the first image
+    $("#overlay img").attr("src", $($images[0]).attr("src")).fadeIn(800);
     }
+    // Prevents overlay from being hidden
+    event.stopPropagation();
+    });
+
+    // When previous button is clicked
+    $prevButton.click(function(event) {
+    // Hide the current image
+    $("#overlay img").hide();
+    // Overlay image location
+    var $currentImgSrc = $("#overlay img").attr("src");
+    // Image with matching location of the overlay image
+    var $currentImg = $('#image-gallery img[src="' + $currentImgSrc + '"]');
+    // Finds the next image
+    var $nextImg = $($currentImg.closest(".image").prev().find("img"));
+    // Fade in the next image
+    $("#overlay img").attr("src", $nextImg.attr("src")).fadeIn(800);
+    // Prevents overlay from being hidden
+    event.stopPropagation();
+    });
+
+    // When the exit button is clicked
+    $exitButton.click(function() {
+    // Fade out the overlay
+    $("#overlay").fadeOut("slow");
+    });
+
     </script>
 
 {% endblock js %}
